--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build: .
@@ -8,7 +6,7 @@ services:
     depends_on:
       - db
     environment:
-      - DB_HOST=127.0.0.1
+      - DB_HOST=db
       - DB_USER=postgres
       - DB_PASSWORD=19022003
       - DB_NAME=userlogin
