--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,13 @@ services:
       - "3000:3000"
     depends_on:
       - db
-    environment:
-      - DB_HOST= 127.0.0.1
-      - DB_USER=postgres
-      - DB_PASSWORD=19022003
-      - DB_NAME=userlogin
+    env_file:
+      - .env
 
   db:
     image: postgres:13-alpine
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 19022003
-      POSTGRES_DB: userlogin
+    env_file:
+      - .env
     volumes:
       - db_data:/var/lib/postgresql/data
 
